# ReviewBot

./: .gitignore  README.md  pyproject.toml
reviewbot/: __main__.py  cli.py  config.py  indexer.py  main.py  models.py  utils.py
reviewbot/agents/: auth.py  chat.py  llm.py
reviewbot/indexing/: embedding.py  indexer.py
reviewbot/querying/: search.py
reviewbot/server/: api.py
server/: api.py  container.py  models.py  utils.py  watcher.py
server/agents/: llm.py  prompt.py  tools.py  utils.py
server/routes/: chat_route.py  index_route.py
server/services/: indexer.py  sessions.py  utils.py
